# yacli

./: .travis-update-gh-pages.sh  .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  index.html  search-index.js
docopt/: enum.Error.html  enum.Value.html  index.html  struct.ArgvMap.html  struct.Decoder.html  struct.Docopt.html
implementors/aho_corasick/: trait.Transitions.js
implementors/collections/borrow/: trait.ToOwned.js
implementors/core/borrow/: trait.Borrow.js  trait.BorrowMut.js
implementors/core/clone/: trait.Clone.js
implementors/pad/: trait.PadStr.js
implementors/term/: trait.Terminal.js
implementors/unicode_width/: trait.UnicodeWidthStr.js
implementors/unreachable/: trait.UncheckedOptionExt.js
implementors/void/: trait.ResultVoidErrExt.js
pad/: PadStr.t.html  enum.Alignment.html  index.html  sidebar-items.js  trait.PadStr.html
shell/: index.html  struct.MultiShell.html  struct.Shell.html  struct.ShellConfig.html
src/: lib.rs
src/aho_corasick/: autiter.rs.html  full.rs.html  lib.rs.html
src/docopt/: dopt.rs.html  lib.rs.html  parse.rs.html  synonym.rs.html
src/pad/: lib.rs.html
src/shell/: lib.rs.html
src/yacli/: lib.rs.html
term/: enum.Attr.html  enum.Error.html  index.html  trait.Terminal.html
term/terminfo/: enum.Error.html  index.html  struct.TermInfo.html  struct.TerminfoTerminal.html
yacli/: fn.main_with_command.html  generic_args.m.html  index.html  macro.generic_args.html  macro.main.html  macro.route!.html  macro.route.html  main.m.html  main_with_command.v.html  sidebar-items.js  struct.MultiShell.html  trait.Command.html  trait.Decode.html
(+72 files in other folders)
