[package]
name = "yacli"
version = "0.3.0"
authors = ["Ignacio Corderi <ignacio@exablox.com>"]
homepage = "https://icorderi.github.io/yacli/"
repository = "https://github.com/icorderi/yacli/"
documentation = "https://icorderi.github.io/yacli/doc/yacli/"
description = "Library for creating CLI tools with a look and feel similiar to Cargo"
keywords = [ "cli", "shell", "colors", "console" ]
readme = "README.md"
license = "MIT"

[dependencies]
shell = "^0.3.0"
docopt = "^0.6.78"
rustc-serialize = "^0.3.16"