[package]
name = "yacli"
version = "0.4.1"
authors = ["Ignacio Corderi <icorderi@msn.com>"]
homepage = "https://icorderi.github.io/yacli/"
repository = "https://github.com/icorderi/yacli/"
documentation = "https://icorderi.github.io/yacli/doc/yacli/"
description = "Library for creating CLI tools with a look and feel similiar to Cargo"
keywords = [ "cli", "shell", "colors", "console" ]
readme = "README.md"
license = "MIT"

[dependencies]
shell = "0.3"
docopt = "0.6"
rustc-serialize = "0.3"